   Hide "(Un)Fold All" menu items instead of just disabling them.
 * src/dialogs.c, src/dialogs.h, src/document.c:
   Add dialogs_show_msgbox_with_secondary().
   Add line and column number in charset conversion error dialog when
   saving a file and improve display of the failed character.
 * src/build.c: Fix broken Run command on Java files on Windows.


2007-11-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/LexHTML.cxx: Fix syntax colouring bug when using '?>' in
                          a PHP comment (closes #1838854).


2007-11-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c: Display character which caused a failed encoding
                   conversion when saving a file.


2007-11-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c, tagmanager/basic.c:
   Use FreeBasic specific sections in symbol list.
   Use Basic parser from CTags SVN and improve the parser for better
   handling of dim and const keywords.
 * src/plugins.c: Fix plugin separator placement in the Tools menu.


2007-11-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/POTFILES.in, plugins/autosave.c, plugins/Makefile.am,
   plugins/makefile.win32: New plugin: Auto Save.
 * geany.glade, src/editor.c, src/interface.c:
   Enable Shift+click on a fold point to unfold all possibly folded
   children (same as the pref "Unfold all children of a fold point").


2007-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c: Fix crash when trying to add a multiline comment in
                 filetypes which don't support it.
 * src/symbols.c, src/treeviews.c, src/treeviews.h:
   Revert the change to make symbol sections bold and use some small
   indentation when expanders are hidden.
 * src/geanyobject.c, src/geanyobject.h, src/main.c, src/plugindata.h,
   src/plugins.c, src/project.c, src/project.h:
   Remove ununsed function project_save().
   Fix typo in plugin API at utils_mkdir().